[FLINK-39847][table] Support in-place conversion of a table to a materialized table (#28287)
* [FLINK-39848][table] Add config option and Catalog API for table to materialized table conversion

Introduce the building blocks for in-place conversion of a regular table to a materialized table. Neither part is wired into SQL execution on its own.

Add the cluster-level table.materialized-table.conversion-from-table.enabled option (default false) that gates the conversion. It is read from the root configuration, so a session-level SET has no effect.

Add Catalog#convertTableToMaterializedTable, which swaps an existing regular table's catalog entry for a materialized table in place while preserving its identity and storage. The default throws UnsupportedOperationException; GenericInMemoryCatalog overrides it with a table-kind check. CatalogManager resolves both tables, delegates to the catalog, and fires an AlterTableEvent. Launching the refresh job is left to the executor, not the catalog.

* [FLINK-39849][table] Convert regular table to materialized table via CREATE OR ALTER

handleCreateOrAlter now dispatches on the kind of the existing object: a materialized table is altered as before, a view is rejected, and a regular table is converted in place to a materialized table when table.materialized-table.conversion-from-table.enabled is set on the cluster (otherwise the statement is rejected as before). The conversion carries over the source table's watermark and primary key when the DDL defines them, rejecting a source with more than one watermark. It emits the structured TableChanges (columns, constraint, watermark, definition query, options, distribution, start mode) by reusing the shared change-building helpers, and returns a ConvertTableToMaterializedTableOperation.

* [FLINK-39850][table] Launch refresh job when converting a table to a materialized table

The SQL gateway's MaterializedTableManager now handles ConvertTableToMaterializedTableOperation: it swaps the cat